syntax = "proto3";

option java_package = "grpc.entity.DeviceProvisioning";
option java_outer_classname = "DeviceProvisioning";



service DeviceProvisioningService {

  rpc RegisterGRPC(gRPC) returns (gRPC) {}
  rpc RegisterMQTT(MQTT) returns (MQTT) {}
  rpc Remove(ID) returns (Response) {}
  rpc Status(ID) returns (State) {}
}

service ShardService {
  rpc PassivateShard(ShardID) returns (Response) {}
}

message gRPC {
  string id = 1;
  string name= 2;
  string location = 3;
}

message MQTT {
  string id = 1;
  string name = 2;
  string location = 3;
  string server = 4;
  bool cleanSession = 5;                // default false
  bool autoReconnect = 6;               // default false
  repeated string topics = 7;
  string provision_service = 8;                    //set by system
  string ref = 9;
  int32 backpressure = 10;
}


message ID {
  string id = 1;
  ShardID shard_id= 2;
}


message ShardID {
  string id = 1;
}

message Response {
  string status =  1;
}

message State {
  string data = 1;
}
